[project]
name = "langchain101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "langchain-tavily>=0.2.13",
    "langchain[google-genai]>=1.1.0",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.4",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.13",
]
